feat: Implement user registration with PostgreSQL and Prisma  - Add Docker PostgreSQL setup woth proper environment isolation   - Implement Prisma schema with User model and role-based access (ADMIN/EDITOR/USER)   - Add user registration endpoint with bcrypt password hashing   - Implement singlton Prisma client pattern for efficient DB connentions   - Add error handling   - Successfully tested user creation with admin role assignment

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Express.js backend API with TypeScript and ESM",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./dist/server.js",
+  "module": "./dist/server.js",
+  "types": "./dist/server.d.ts",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/server.ts",
     "build": "tsc && tsc-alias",
     "start": "node --experimental-strip-types src/index.ts",
-    "start:prod": "node dist/index.js",
+    "start:prod": "node dist/server.js",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
@@ -20,32 +20,32 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
-    "express": "^5",
-    "cors": "^2",
-    "helmet": "^8",
-    "morgan": "^1",
-    "compression": "^1",
-    "rate-limiter-flexible": "^7",
-    "joi": "^18",
-    "bcryptjs": "^3",
-    "jsonwebtoken": "^9",
-    "prisma": "^6",
     "@prisma/client": "^6",
-    "winston": "^3",
-    "dotenv": "^17"
+    "bcryptjs": "^3",
+    "compression": "^1",
+    "cors": "^2",
+    "dotenv": "^17",
+    "express": "^5",
+    "helmet": "^8",
+    "joi": "^18",
+    "jsonwebtoken": "^9",
+    "morgan": "^1",
+    "rate-limiter-flexible": "^7",
+    "winston": "^3"
   },
   "devDependencies": {
-    "@types/express": "^5",
-    "@types/cors": "^2",
-    "@types/morgan": "^1",
     "@types/compression": "^1",
+    "@types/cors": "^2",
+    "@types/express": "^5",
     "@types/jsonwebtoken": "^9",
+    "@types/morgan": "^1",
     "@types/node": "^22.18.0",
-    "tsx": "^4",
-    "tsc-alias": "^1",
+    "@types/supertest": "^6",
+    "prisma": "^6",
     "rimraf": "^6",
     "supertest": "^7",
-    "@types/supertest": "^6"
+    "tsc-alias": "^1",
+    "tsx": "^4"
   },
   "engines": {
     "node": ">=22.18.0",
