--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,7 +27,7 @@
     "dotenv": "^17",
     "express": "^5",
     "helmet": "^8",
-    "joi": "^18",
+    "zod": "^4",
     "jsonwebtoken": "^9",
     "morgan": "^1",
     "rate-limiter-flexible": "^7",
