--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -9,11 +9,12 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc && tsc-alias",
+    "postinstall": "prisma generate",
     "start": "node --experimental-strip-types src/index.ts",
     "start:prod": "node dist/server.js",
-    "test": "vitest",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
+    "test": "cross-env NODE_ENV=test vitest",
+    "test:ui": "cross-env NODE_ENV=test vitest --ui",
+    "test:coverage": "cross-env NODE_ENV=test vitest --coverage",
     "lint": "eslint . --fix",
     "lint:check": "eslint .",
     "typecheck": "tsc --noEmit",
@@ -27,11 +28,11 @@
     "dotenv": "^17",
     "express": "^5",
     "helmet": "^8",
-    "zod": "^4",
     "jsonwebtoken": "^9",
     "morgan": "^1",
     "rate-limiter-flexible": "^7",
-    "winston": "^3"
+    "winston": "^3",
+    "zod": "^4"
   },
   "devDependencies": {
     "@types/compression": "^1",
@@ -41,11 +42,14 @@
     "@types/morgan": "^1",
     "@types/node": "^22.18.0",
     "@types/supertest": "^6",
+    "@vitest/coverage-v8": "^3",
+    "cross-env": "^10.1.0",
     "prisma": "^6",
     "rimraf": "^6",
     "supertest": "^7",
     "tsc-alias": "^1",
-    "tsx": "^4"
+    "tsx": "^4",
+    "vitest": "^3"
   },
   "engines": {
     "node": ">=22.18.0",
