--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,27 +15,28 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^19",
-    "react-dom": "^19",
-    "react-router-dom": "^7",
+    "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5",
     "@tanstack/react-query-devtools": "^5",
     "axios": "^1",
     "clsx": "^2",
+    "react": "^19",
+    "react-dom": "^19",
+    "react-router-dom": "^7",
     "tailwind-merge": "^3"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6",
+    "@testing-library/react": "^16",
+    "@testing-library/user-event": "^14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5",
-    "vite": "^7",
-    "tailwindcss": "^4",
     "autoprefixer": "^10",
+    "jsdom": "^26",
     "postcss": "^8",
-    "@testing-library/react": "^16",
-    "@testing-library/jest-dom": "^6",
-    "@testing-library/user-event": "^14",
-    "jsdom": "^26"
+    "tailwindcss": "^4",
+    "vite": "^7"
   },
   "engines": {
     "node": ">=22.18.0",
