refactor: Create shared-types package with Zod schemas
- Create @animation-co/shared-types workspace package
  * Common types: User interface, UserRole enum
  * Auth schemas: Zod validation with TypeScript inference
  * Request/Response types for API contract
- Implement type converter pattern (toApiUser helper)
  * Centralizes Prisma → API type conversion
  * Solves DRY violation in route handlers
  * Single place to update when adding user fields
- Update backend to use shared types
  * Services: Import RegisterRequest, LoginRequest from shared-types
  * Routes: Import schemas and response types from shared-types
  * Tests: Import response types from shared-types
  * Delete old local auth.schema.ts file
- Configure build order dependencies
  * Build shared-types before apps (sequential)
  * Update root package.json build/typecheck scripts
  * Fix Windows quoting in PNPM filter commands
- Architecture: Clean layer separation
  * Service layer: Prisma types (Date objects)
  * Route layer: Shared types (ISO strings)
  * Conversion at boundary with helper function

Benefits:
- Single source of truth for API contract
- Adding new fields only requires 2 file changes
- Frontend can import same types (future work)
- Type safety across monorepo boundaries

All 20 backend tests passing ✅

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -21,6 +21,7 @@
     "clean": "rimraf dist"
   },
   "dependencies": {
+    "@animation-co/shared-types": "workspace:*",
     "@prisma/client": "^6",
     "bcryptjs": "^3",
     "compression": "^1",
