--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@animation-co/shared-types": "workspace:*",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5",
     "@tanstack/react-query-devtools": "^5",
