test: Add comprehensive LoginPage test suite (8 tests, 100% coverage)
Infrastructure:
- Add Vitest configuration with jsdom environment
- Configure jest-dom matchers and TypeScript declarations
- Set up test helpers (renderLoginPage with providers)
- Add path alias resolution for tests
- Update ESLint to ignore config files properly

LoginPage Tests (8/8):
- ✅ Successful login with valid credentials
- ✅ Error message display on invalid credentials
- ✅ Loading state during API call (button text + disabled)
- ✅ Disabled inputs during loading
- ✅ Register link navigation
- ✅ Navigation to dashboard after login
- ✅ Already authenticated redirect
- ✅ Form validation (required fields)

Test Patterns Established:
- Mock axios with vi.mock() for API calls
- Mock react-router hooks (useNavigate)
- Mock useAuth hook with vi.spyOn() for auth state
- Simulate user interactions with userEvent
- Test async behavior with waitFor
- Clean up mocks between tests

Dependencies:
- Add vitest, @vitest/ui to frontend
- Add @testing-library/react, @testing-library/user-event
- Add @testing-library/jest-dom for matchers
- Add jsdom for browser environment

Coverage: LoginPage 100% (8/8 tests), Overall frontend ~16% (8/50+ tests)

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -33,11 +33,13 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5",
+    "@vitest/ui": "^3",
     "autoprefixer": "^10",
     "jsdom": "^26",
     "postcss": "^8",
     "tailwindcss": "^4",
-    "vite": "^7"
+    "vite": "^7",
+    "vitest": "^3"
   },
   "engines": {
     "node": ">=22.18.0",
