fix: Resolve bugs and technical debt from Phase 2A.5
Bug Fixes:
- Fix query key mismatch in useAuth.tsx (removed accessToken from query key)
- Fix axios interceptor refresh loop (exclude ALL /auth/ endpoints)
- Fix RegisterPage redirect (allow ADMIN users to access for registration)

Technical Debt:
- Add error message in authorize.ts (was empty throw)
- Remove unnecessary type assertion in authService.ts
- Add Prisma graceful shutdown in server.ts (SIGTERM/SIGINT handlers)
- Add Prisma query logging for development
- Add refresh token cleanup mechanism (lazy cleanup on login)
- Add ESLint ignore for prisma folder
- Improve error logging in auth routes

Infrastructure:
- Create database seed file with admin and test users
- Add prisma seed config to package.json
- Update CLAUDE.md (cleaner, more focused)
- Update HISTORY.md with Phase 2A.5 learnings

All 49 tests passing (22 backend + 27 frontend)

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,6 +6,9 @@
   "main": "./dist/server.js",
   "module": "./dist/server.js",
   "types": "./dist/server.d.ts",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc && tsc-alias",
